--- a/zxmn-main/zxmn-main/DAVI/style.css
+++ b/zxmn-main/zxmn-main/DAVI/style.css
@@ -3,7 +3,7 @@ margin: 0;
 padding: 0;
 }
 .cabecalho{
-    background-color: #726ae4;
+    background-color: #05312c;
     display: flex;
     justify-content: space-around;
     align-items: center;
